--- a/templates/users/users_list.html
+++ b/templates/users/users_list.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
+{% block pageheader %}<h1>Users</h1>{% endblock pageheader %}
 
 {% block main %}
+    <section class="actions top">
+        <a class="create" href="{% url 'users-create' %}">+</a>
+    </section>
     <section>
-        <a href="{% url 'users-create' %}">Create</a>
         <table>
             <thead>
                 <th>Id</th>
@@ -15,13 +18,17 @@
             <tbody>
                 {% for obj in object_list %}
                 <tr>
-                    <td>
-                        <a href="{% url 'users-detail' obj.pk %}">{{ obj.pk }}</a>
-                    </td>
+                    <td>{{ obj.pk }}</td>
                     <td>{{ obj.username }}</td>
                     <td>{{ obj.first_name }}</td>
                     <td>{{ obj.last_name }}</td>
-                    <td>No actions</td>
+                    <td>
+                        <div class="actions middle">
+                            <a class="view" href="{% url 'users-detail' obj.pk %}">&#128196;</a>
+                            <a class="update" href="{% url 'users-update' obj.pk %}">&#128221;</a>
+                            <a class="delete" href="{% url 'users-delete-confirmation' obj.pk %}">&#10006;</a>
+                        </div>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
